@@ -12,6 +12,7 @@
 
 #define EQUALS(l, i) (!STRCASECMP((l), (i)))
 #define ISINST(l, i) (!STRNCASECMP((l), (i), sizeof(i) - 1) && (!(l)[sizeof(i) - 1] || isspace((unsigned char)((l)[sizeof(i) - 1]))))
+#define STARTSINST(l, i) (!STRNCASECMP((l), (i), sizeof(i) - 1))
 
 typedef enum
 {
@@ -28,6 +29,39 @@ static struct
 {
   lineNode *head;
 } _G;
+
+/*----------------------------------------------------------------------------*/
+/* strNextCharBlock - Returns the next block of chars (after spaces, comma)   */
+/* Leading spaces and Current block are skipped and search stops at next block*/
+/* Valid block separators are: ' ' and ','                                    */
+/* If no block is found (EOS or ';'), returns NULL                            */
+/*----------------------------------------------------------------------------*/
+static char *
+strNextCharBlock(const char *str)
+{
+  if (!str || !str[0])
+    return 0;
+
+  while (isblank ((unsigned char)(str[0])))
+    str++; // skip leading blanks
+
+  while (str[0] && !isblank ((unsigned char)(str[0])) && str[0] != ';')
+    {
+      if (str[0] == ',')
+        {
+          str++; // current block is finished with ','
+          break;
+        }
+      str++; // next char of current block
+    }
+
+  while (isblank ((unsigned char)(str[0])))
+    str++; // skip trailing blanks 
+    
+  if (str[0] && str[0] != ';')
+    return (char *)str;
+  return 0;
+}
 
 static bool
 isInt(const char *str)
@@ -160,6 +194,76 @@ isSpIndexed(const char *what)
   return isRelativeAddr(what, "sp");
 }
 
+/*-----------------------------------------------------------------*/
+/* stm8InstIsRegToReg - Checks if 'line' is a reg to reg move      */
+/* isword == FALSE : Look for registers a, xl, xh, yl & yh         */
+/* isword == TRUE  : Look for registers x, y & sp                  */
+/*-----------------------------------------------------------------*/
+static bool
+stm8InstIsRegToReg(const char *line, bool isword)
+{
+  int regNumber = 0;
+
+  if ((line = strNextCharBlock(line)))
+    {
+      while(line[0])
+        {
+          bool regFound = false;
+          char chrLow = tolower ((unsigned char)line[0]);
+
+          // Check for register names
+          if (isword)
+            {
+              if (chrLow == 'x' || chrLow == 'y')
+                regFound = true;
+
+              if (chrLow == 's')
+                {
+                  line++;
+                  if (line[0] == 'p')
+                    regFound = true;
+                  else
+                    return false;
+                }
+            }
+          else
+            {
+              if (chrLow == 'a')
+                regFound = true;
+
+              if (chrLow == 'x' || chrLow == 'y')
+                {
+                  line++;
+                  chrLow = tolower ((unsigned char)line[0]);
+                  if (chrLow == 'h' || chrLow == 'l')
+                    regFound = true;
+                  else
+                    return false;
+                }
+            }
+
+          // If register, process next character
+          if (regFound)
+            line++;
+
+          // Continue only if valid separator or end
+          if (!line[0] || line[0] == ',' || isblank (line[0]))
+            {
+              if (regFound)
+                regNumber++;
+            }
+          else
+            {
+              return false;
+            }
+
+          // Next char if not eos
+          if(line[0])
+            line++;
+        }
+    }
+  return (regNumber == 2);
+}
 
 int
 stm8instructionSize(lineNode *pl)
@@ -172,8 +276,8 @@ stm8instructionSize(lineNode *pl)
   op1start = nextToken(NULL);
   op2start = nextToken(NULL);
 
-  while(op1start && isspace(*op1start)) op1start++;
-  while(op2start && isspace(*op2start)) op2start++;
+  while(op1start && isspace((unsigned char)op1start[0])) op1start++;
+  while(op2start && isspace((unsigned char)op2start[0])) op2start++;
   //printf("line=%s operand=%s op1start=%s op2start=%s\n", pl->line, operand, op1start, op2start);
 
   /* Operations that always costs 1 byte */
@@ -205,7 +309,7 @@ stm8instructionSize(lineNode *pl)
       return 3;
 
   /* Operations that always costs 2 byte */
-  if(!strncmp(operand, "jr", 2)
+  if(STARTSINST(operand, "jr")
     || ISINST(operand, "callr")
     || ISINST(operand, "wfe"))
       return 2;
@@ -228,7 +332,7 @@ stm8instructionSize(lineNode *pl)
   if (EQUALS(operand, "push")
     || EQUALS(operand, "pop"))
   {
-    assert (op1start != NULL);
+    wassert (op1start);
     if (!strcmp(op1start, "a"))
       return 1;
     if (!strcmp(op1start, "cc"))
@@ -258,7 +362,7 @@ stm8instructionSize(lineNode *pl)
   {
     int i = 0;
 
-    assert (op1start != NULL);
+    wassert (op1start);
     if(!strcmp(op1start, "a") || !strcmp(op1start, "(x)"))
       return(1);
     if(!strcmp(op1start, "(y)"))
@@ -321,7 +425,7 @@ stm8instructionSize(lineNode *pl)
   }
 
   /* Operations that costs 2 or 3 bytes for immediate */
-  if(!strncmp(operand, "ld", 2)
+  if(STARTSINST(operand, "ld")
                 || !strncmp(operand, "cp", 2)
                 || EQUALS(operand, "adc")
                 || EQUALS(operand, "add")
@@ -334,7 +438,7 @@ stm8instructionSize(lineNode *pl)
   {
     int i = 0;
     char suffix;
-    assert (op1start != NULL && op2start != NULL);
+    wassert (op1start && op2start);
     suffix = operand[strlen(operand)-1];
     if(suffix == 'w' && isImmediate(op2start))
       {
@@ -365,7 +469,12 @@ stm8instructionSize(lineNode *pl)
     if(isLabel(op1start) || isLabel(op2start))
       return(3+i);
     if(isReg(op1start) && isReg(op2start))
-      return(1+i);
+      {
+        if (!strncmp(op1start, "x", 1) && (!strncmp(op2start, "y", 1) || !strncmp(op2start, "sp", 2))
+          || !strncmp(op1start, "sp", 2) && !strncmp(op2start, "x", 1))
+          return(1);
+        return(1+i);
+      }
     if(!strcmp(op2start, "a"))
       return(3);
     if(readint(op2start) <= 0xFF)
@@ -694,8 +803,8 @@ stm8MightRead(const lineNode *pl, const char *what)
         pl->line[5] == extra)
           return TRUE;
 
-      if (ISINST (pl->line, "pushw")
-        || ISINST (pl->line, "swapw") && pl->line[6] == extra)
+      if ((ISINST (pl->line, "pushw")
+        || ISINST (pl->line, "swapw")) && pl->line[6] == extra)
           return TRUE;
 
       if (ISINST (pl->line, "cpw") && pl->line[4] == extra)
@@ -758,7 +867,7 @@ stm8UncondJump(const lineNode *pl)
 static bool
 stm8CondJump(const lineNode *pl)
 {
-  return (!stm8UncondJump(pl) && !strncmp(pl->line, "jr", 2) ||
+  return (!stm8UncondJump(pl) && STARTSINST(pl->line, "jr") ||
     ISINST(pl->line, "btjt") || ISINST(pl->line, "btjf"));
 }
 
@@ -768,11 +877,13 @@ stm8SurelyWritesFlag(const lineNode *pl, const char *what)
   if (!strcmp (what, "n") || !strcmp (what, "z"))
     {
       if (ISINST (pl->line, "addw") && !strcmp (pl->line + 5, "sp"))
-        return FALSE;
+        return false;
       if (ISINST (pl->line, "sub") && !strcmp (pl->line + 4, "sp"))
-        return FALSE;
-      if (ISINST (pl->line, "ld") || ISINST (pl->line, "ldw")) // Todo: Improve accuracy of these two.
-        return FALSE;
+        return false;
+      if (ISINST (pl->line, "ld"))
+        return !stm8InstIsRegToReg(pl->line, false);
+      if (ISINST (pl->line, "ldw"))
+        return !stm8InstIsRegToReg(pl->line, true);
       if (ISINST (pl->line, "pop"))
         return (pl->line[5] == 'c');
       if (ISINST (pl->line, "bccm") || ISINST (pl->line, "bcpl") ||
@@ -783,8 +894,8 @@ stm8SurelyWritesFlag(const lineNode *pl, const char *what)
         ISINST (pl->line, "ccf") ||
         ISINST (pl->line, "exg") || ISINST (pl->line, "exgw") ||
         ISINST (pl->line, "halt") || ISINST (pl->line, "int") ||
-        ISINST (pl->line, "jp") || ISINST (pl->line, "jpf") ||
-        pl->line[0] == 'j' && pl->line[1] == 'r' ||
+        STARTSINST (pl->line, "jp") ||
+        STARTSINST (pl->line, "jr") ||
         ISINST (pl->line, "mov") || ISINST (pl->line, "mul") ||
         ISINST (pl->line, "nop") ||
         ISINST (pl->line, "popw") || ISINST (pl->line, "push") || ISINST (pl->line, "pushw") ||
@@ -792,11 +903,35 @@ stm8SurelyWritesFlag(const lineNode *pl, const char *what)
         ISINST (pl->line, "ret") || ISINST (pl->line, "retf") ||
         ISINST (pl->line, "rvf") || ISINST (pl->line, "scf") ||
         ISINST (pl->line, "sim") || ISINST (pl->line, "trap") || ISINST (pl->line, "wfe") || ISINST (pl->line, "wfi"))
-        return FALSE;
-      return TRUE;
+        return false;
+      return true;
+    }
+  else if (!strcmp (what, "c"))
+    {        
+      if (ISINST (pl->line, "addw") && !strcmp (pl->line + 5, "sp"))
+        return false;
+      if (ISINST (pl->line, "sub") && !strcmp (pl->line + 4, "sp"))
+        return false;
+        
+      if (ISINST (pl->line, "adc") ||
+        STARTSINST (pl->line, "add") || // add, addw
+        STARTSINST (pl->line, "btj") || // btjt, btjf
+        ISINST (pl->line, "ccf") ||
+        STARTSINST (pl->line, "cp") || // cp, cpw, cpl, cplw
+        STARTSINST (pl->line, "div") || // div, divw
+        STARTSINST (pl->line, "neg") || // neg, negw
+        ISINST (pl->line, "rcf") ||
+        STARTSINST (pl->line, "rlc") || // rlc, rlcw
+        STARTSINST (pl->line, "rrc") || // rrc, rrcw
+        ISINST (pl->line, "sbc") ||
+        ISINST (pl->line, "scf") ||
+        STARTSINST (pl->line, "sl") || // sll, sla, sllw, slaw
+        STARTSINST (pl->line, "sr") || // sra, sraw, srl, srlw
+        STARTSINST (pl->line, "sub")) // sub, subw
+        return true;
     }
 
-  return FALSE;
+  return false;
 }
 
 static bool
